--- a/app/web/templates/layout/app.html.eex
+++ b/app/web/templates/layout/app.html.eex
@@ -16,10 +16,17 @@
       <header class="header">
         <nav role="navigation">
           <ul class="nav nav-pills pull-right">
+            <%= if @current_user do %>
+            <li><%= @current_user.email %> (<%= @current_user.id %>)</li>
             <li>
-              <%= link "Register", to: user_path(@conn, :new) %>
+              <%= link "Sign out", to: session_path(@conn, :delete,
+                  @current_user),
+                  method: "delete" %>
             </li>
-          </ul>
+            <% else %>
+            <li><%= link "Register", to: user_path(@conn, :new) %></li>
+            <li><%= link "Sign in", to: session_path(@conn, :new) %></li>
+            <% end %>
         </nav>
         <span class="logo"></span>
       </header>
