--- a/web/src/app/device-detail.component.html
+++ b/web/src/app/device-detail.component.html
@@ -5,6 +5,10 @@
   <div>
     <label>name: </label>
     <input [(ngModel)]="device.name" placeholder="name" />
+  </div>
+  <div>
+    <label>description: </label>
+    <input [(ngModel)]="device.description" placeholder="description" />
    </div>
   <button (click)="goBack()">Back</button>
   <button (click)="save()">Save</button>
@@ -16,3 +20,4 @@ Copyright 2017 Google Inc. All Rights Reserved.
 Use of this source code is governed by an MIT-style license that
 can be found in the LICENSE file at http://angular.io/license
 -->
+
