--- a/web/src/app/dashboard.component.html
+++ b/web/src/app/dashboard.component.html
@@ -1,4 +1,9 @@
 <h3>Devices</h3>
+<a New device [routerLink]="['/devices']"  class="col-1-4">
+    <div class="module device">
+      <h5> NEW DEVICE </h5>
+    </div>
+</a>
 <div class="grid grid-pad">
   <a *ngFor="let device of devices"  [routerLink]="['/devices', device.id]"  class="col-1-4">
     <div class="module device">
@@ -7,10 +12,3 @@
   </a>
 </div>
 
-
-
-<!--
-Copyright 2017 Google Inc. All Rights Reserved.
-Use of this source code is governed by an MIT-style license that
-can be found in the LICENSE file at http://angular.io/license
--->
