--- a/web/src/app/device-detail.component.html
+++ b/web/src/app/device-detail.component.html
@@ -12,12 +12,11 @@
    </div>
   <button (click)="goBack()">Back</button>
   <button (click)="save()">Save</button>
+  <button (click)="destroy()">Destroy</button>
+  <h1> Metrics</h1>
+  <ul>
+    <li *ngFor="let metric of metrics">
+      <metric [metric]="metric"></metric>
+    </li>
+  </ul>
 </div>
-
-
-<!--
-Copyright 2017 Google Inc. All Rights Reserved.
-Use of this source code is governed by an MIT-style license that
-can be found in the LICENSE file at http://angular.io/license
--->
-
