--- a/web/src/app/metric-detail.component.html
+++ b/web/src/app/metric-detail.component.html
@@ -12,11 +12,11 @@
    </div>
   <button (click)="goBack()">Back</button>
   <button (click)="save()">Save</button>
-  <button (click)="destroy()">Destroy</button>
-  <h1> Metrics</h1>
+  <button (click)="destroy()">Destroy</button> 
+  <h1> Measures</h1>
   <ul>
     <li *ngFor="let measure of measures">
-      <measure [measure]="measure"></metric>
+      <measure [metric]="metric" [measure]="measure"></measure>
     </li>
   </ul>
 </div>
