--- a/web/src/app/measure.component.html
+++ b/web/src/app/measure.component.html
@@ -1,4 +1,4 @@
 <div>
   <h2>Value: {{measure.value}}</h2>
-  <h2>Timestamp: {{measure.timestamp}}</h2>
+  <h2>Timestamp: {{measure.timestamp | date:'medium'}}</h2>
 </div>
