adding some new frontend parts

--- a/web/src/app/devices.component.html
+++ b/web/src/app/devices.component.html
@@ -1,4 +1,5 @@
-<h2>My Device</h2>
+<h2>New Device</h2>
+
 <div>
   <label>Device name:</label> <input #deviceName />
   <label>Device description:</label> <input #deviceDescription />
@@ -6,4 +7,3 @@
     Add
   </button>
 </div>
-
