--- a/web/src/app/device-detail.component.html
+++ b/web/src/app/device-detail.component.html
@@ -1,22 +1,28 @@
 <div *ngIf="device">
-  <h2>{{device.name}} details!</h2>
-  <div>
-    <label>id: </label>{{device.id}}</div>
-  <div>
-    <label>name: </label>
-    <input [(ngModel)]="device.name" placeholder="name" />
-  </div>
-  <div>
-    <label>description: </label>
-    <input [(ngModel)]="device.description" placeholder="description" />
-   </div>
-  <button (click)="goBack()">Back</button>
-  <button (click)="save()">Save</button>
-  <button (click)="destroy()">Destroy</button>
-  <h1> Metrics</h1>
-  <ul>
-    <li *ngFor="let metric of metrics">
-      <metric [metric]="metric"></metric>
-    </li>
-  </ul>
+  <mat-card class="example-card">
+    <mat-card-header>
+      <div mat-card-avatar class="example-header-image"></div>
+      <mat-card-title>{{ device.name }} details!</mat-card-title>
+      <mat-card-subtitle>id: {{ device.id }}</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      <label>name: </label>
+      <input [(ngModel)]="device.name" placeholder="name" />
+
+      <label>description: </label>
+      <input [(ngModel)]="device.description" placeholder="description" />
+
+      <h1> Metrics</h1>
+      <mat-list>
+        <mat-list-item *ngFor="let metric of metrics">
+          <metric [metric]="metric"></metric>
+        </mat-list-item>
+      </mat-list>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button (click)="goBack()">Back</button>
+      <button mat-button (click)="save()">Save</button>
+      <button mat-button (click)="destroy()">Destroy</button>
+    </mat-card-actions>
+  </mat-card>
 </div>
