--- a/web/src/app/metric-detail.component.html
+++ b/web/src/app/metric-detail.component.html
@@ -1,22 +1,32 @@
 <div *ngIf="metric">
-  <h2>{{metric.name}} details!</h2>
-  <div>
-    <label>id: </label>{{metric.id}}</div>
-  <div>
-    <label>name: </label>
-    <input [(ngModel)]="metric.name" placeholder="name" />
-  </div>
-  <div>
-    <label>description: </label>
-    <input [(ngModel)]="metric.description" placeholder="description" />
-   </div>
-  <button (click)="goBack()">Back</button>
-  <button (click)="save()">Save</button>
-  <button (click)="destroy()">Destroy</button> 
-  <h1> Measures</h1>
-  <ul>
-    <li *ngFor="let measure of measures">
-      <measure [metric]="metric" [measure]="measure"></measure>
-    </li>
-  </ul>
+  <mat-card>
+    <mat-card-title>Metric details</mat-card-title>
+        
+    <mat-form-field class="row">
+      <input matInput [(ngModel)]="metric.name" placeholder="Name" />
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput [(ngModel)]="metric.description" placeholder="Description" />
+    </mat-form-field>
+
+    <mat-card-actions>
+      <button mat-raised-button (click)="goBack()">Back</button>
+      <button mat-raised-button color="accent" (click)="save()">Save</button>
+      <button mat-raised-button color="warn" (click)="destroy()">Destroy</button>
+    </mat-card-actions>
+
+    <mat-card>
+      <h1> Measures</h1>
+      <mat-list>
+        <mat-list-item *ngFor="let measure of measures">
+          <a mat-list-item [routerLink]="['/devices', metric.device_id, 'metrics', metric.id]" color="primary">
+            <mat-icon matListIcon>memory</mat-icon>
+            <h4 matLine>{{measure.name}}</h4>
+            
+            <p matLine class="demo-2"> {{measure.value}} </p>
+          </a>
+        </mat-list-item>
+      </mat-list>
+    </mat-card>
+ </mat-card> 
 </div>
