fixing some bugs in delete buttons and adding tabs in metrics details view

--- a/web/src/app/metric-detail.component.html
+++ b/web/src/app/metric-detail.component.html
@@ -14,19 +14,25 @@
       <button mat-raised-button color="accent" (click)="save()">Save</button>
       <button mat-raised-button color="warn" (click)="destroy()">Destroy</button>
     </mat-card-actions>
-
+    
     <mat-card>
       <h1> Measures</h1>
-      <mat-list>
-        <mat-list-item *ngFor="let measure of measures">
-          <a mat-list-item [routerLink]="['/devices', metric.device_id, 'metrics', metric.id]" color="primary">
-            <mat-icon matListIcon>memory</mat-icon>
-            <h4 matLine>{{measure.name}}</h4>
-            
-            <p matLine class="demo-2"> {{measure.value}} </p>
-          </a>
-        </mat-list-item>
-      </mat-list>
+      <mat-tab-group>
+        <mat-tab label="Measures table">
+          <mat-list>
+            <mat-list-item *ngFor="let measure of measures; last as isLast">
+              <mat-icon matListIcon>memory</mat-icon>
+              <h4 matLine>{{measure.name}}</h4>
+              
+              <p matLine class="demo-2"> {{measure.value}} </p>
+              <p matLine class="demo-2"> {{measure.timestamp | date:'medium'}} </p>
+            </mat-list-item>
+          </mat-list>
+        </mat-tab>
+        <mat-tab label="Data graphic">
+          
+        </mat-tab>
+      </mat-tab-group>
     </mat-card>
- </mat-card> 
+  </mat-card> 
 </div>
