update to 6.1.10 angular ver

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -3,6 +3,8 @@
 
   <span>Sense IoT Hub</span>
   <span class="fill-remaining-space"></span>
+   <span>ng: {{version}}</span>
+  <span class="fill-remaining-space"></span>
   <button mat-button color="basic" routerLink="/dashboard" routerLinkActive="active">
     <mat-icon>dashboard</mat-icon>
     Dashboard
@@ -23,3 +25,4 @@
   -->
 </mat-toolbar>
 <router-outlet></router-outlet>
+
